--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,22 @@
 {
-    "name": "pixlee/pixlee",
+    "name": "pixlee/magento2",
     "description": "Social commerce platform to collect, curate, and display user-generated content to enhance your Magento store",
-    "require": {
-        "php": "~5.4.11|~5.5.0",
-        "magento/magento-composer-installer": "*"
-    },
     "type": "magento2-module",
-    "version": "1.0.2",
+    "version": "1.0.0",
+    "authors": [
+        {
+            "name": "Pixlee",
+            "email": "hi@pixleeteam.com",
+            "homepage": "http://www.pixlee.com"
+        }
+    ],
+    "license": [
+        "OSL-3.0",
+        "AFL-3.0"
+    ],
+    "autoload": {
+        "files": [ "registration.php" ]
+    },
     "keywords": [
         "magento2",
         "magento 2",
