update the readme to be client-facing, update composer.json to use more relevant email

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Pixlee",
-            "email": "hi@pixleeteam.com",
+            "email": "magento@pixleeturnto.com",
             "homepage": "http://www.pixlee.com"
         }
     ],
