--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "pixlee/magento2",
+    "name": "pixlee-team/magento2",
     "description": "Social commerce platform to collect, curate, and display user-generated content to enhance your Magento store",
     "type": "magento2-module",
     "version": "1.2.1",
     "authors": [
         {
-            "name": "Pixlee",
+            "name": "Pixlee Team",
             "email": "magento@pixleeturnto.com",
             "homepage": "http://www.pixlee.com"
         }
