TSD-190: Export Fix Code Refactor https://pixlee.atlassian.net/browse/TSD-190 Fixed issue getting admin website id for export; Refactored code organization; General code cleanup

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         {
             "name": "Pixlee Team",
             "email": "magento@pixleeturnto.com",
-            "homepage": "http://www.pixlee.com"
+            "homepage": "https://www.pixlee.com"
         }
     ],
     "license": [
