--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         }
     ],
     "license": [
-        "OSL-3.0",
-        "AFL-3.0"
+        "OSL-3.0"
     ],
     "autoload": {
         "files": [ "registration.php" ],
