--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "php": "~7.1.3||~7.2.0||~7.3.0||~7.4.0||~8.0.0||~8.1.0"
     },
     "license": [
-        "Open Software License (OSL 3.0)"
+        "OSL-3.0"
     ],
     "autoload": {
         "files": [
