--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,15 @@
     ],
     "require": {
         "magento/framework": "*",
-        "magento/module-backend": "101.0.*||102.0.*",
-        "magento/module-catalog": "103.0.*||104.0.*",
-        "magento/module-config": "101.1.*||101.2.*",
-        "magento/module-configurable-product": "100.3.*||100.4.*",
-        "magento/module-cron": "100.3.*||100.4.*",
-        "magento/module-sales": "102.0.*||103.0.*",
-        "magento/module-store": "101.0.*||101.1.*",
-        "magento/module-url-rewrite": "101.1.*||102.0.*",
-        "php": "~7.1.3||~7.2.0||~7.3.0||~7.4.0||~8.0.0||~8.1.0"
+        "magento/module-backend": "101.0.*|102.0.*",
+        "magento/module-catalog": "103.0.*|104.0.*",
+        "magento/module-config": "101.1.*|101.2.*",
+        "magento/module-configurable-product": "100.3.*|100.4.*",
+        "magento/module-cron": "100.3.*|100.4.*",
+        "magento/module-sales": "102.0.*|103.0.*",
+        "magento/module-store": "101.0.*|101.1.*",
+        "magento/module-url-rewrite": "101.1.*|102.0.*",
+        "php": "^7.1.3|~8.0.0|~8.1.0"
     },
     "license": [
         "OSL-3.0"
