--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "magento/module-sales": "102.0.*|103.0.*",
         "magento/module-store": "101.0.*|101.1.*",
         "magento/module-url-rewrite": "101.1.*|102.0.*",
-        "php": "^7.1.3|~8.0.0|~8.1.0"
+        "php": "^7.1.3|~8.0.0|~8.1.0|~8.2.0"
     },
     "license": [
         "OSL-3.0"
