--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "magento/framework": "*",
+        "magento/framework": ">=102.0.1",
         "magento/module-backend": "101.0.*|102.0.*",
         "magento/module-catalog": "103.0.*|104.0.*",
         "magento/module-config": "101.1.*|101.2.*",
