--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,11 @@
 {
     "name": "pixlee/magento2",
-    "version": "2.0.0",
     "description": "Social commerce platform to collect, curate, and display user-generated content to enhance your Magento store",
+    "version": "2.1.0",
     "type": "magento2-module",
+    "license": [
+        "OSL-3.0"
+    ],
     "authors": [
         {
             "name": "Pixlee TurnTo an Emplifi Company",
@@ -22,9 +25,6 @@
         "magento/module-url-rewrite": "101.1.*|102.0.*",
         "php": "^7.1.3|~8.0.0|~8.1.0|~8.2.0"
     },
-    "license": [
-        "OSL-3.0"
-    ],
     "autoload": {
         "files": [
             "registration.php"
@@ -37,6 +37,7 @@
         "magento2",
         "magento 2",
         "pixlee",
+        "emplifi",
         "social commerce",
         "user-generated content",
         "ugc"
